@@ -1,3 +1,12 @@
+1998-08-19  Marcus G. Daniels  <mgd@wijiji.santafe.edu>
+
+	* UName.[hm], simtools.h ([UName +create:setConfigBaseName:],
+	[UName +create:setAppConfigBaseName:]): New methods.
+
+	* UName.[hm], simtools.m: Rename NoBaseNameForUName to UNameError.
+
+	* Archiver.m: Include objectbase.h instead of objectbase/Arguments.h.
+
 1998-07-23  Marcus G. Daniels  <mgd@wijiji.santafe.edu>
 
 	* Archiver.m: Include misc.h instead of unistd.h.
